--- a/app/views/users/_side.html.haml
+++ b/app/views/users/_side.html.haml
@@ -65,7 +65,7 @@
           プロフィール
           = icon('fas','angle-right')
       %li
-        = link_to "#", class: "mypage__side__nav__list__item" do
+        = link_to address_users_path, class: "mypage__side__nav__list__item" do
           発送元、お届け先住所変更
           = icon('fas','angle-right')
       %li
