--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -22,7 +22,7 @@
       %p product2
 
 - if flash[:notice]
-  %p.alert= flash[:notice]
+  %p= flash[:notice]
 
 .main
   .showmain
@@ -101,26 +101,20 @@
                   = link_to("購入",item_path(@item.id),class:"item-buy-btn")
             %form.item-Description
               %textarea= @item.description
-        - if user_signed_in?
           .commentBox
             %ul.commentContents
-            = form_tag(item_comments_path(@item.id), method: :post) do
-              %textarea{cols:"30",name:"text",placeholder:"コメントする",rows:"2"}
-              %input{type:"submit",value:"コメント",class:"commentBtn"}
+            %form#new_comment.new_comment{"accept-charset":"UTF-8", action:"#", method:"post"}
+              %input{name:"utf8", type:"hidden", value:"✓"}/
+              %input{name:"authenticity_token", type:"hidden", value:"T8vpqdpS7TX8SuZ7mZbU6ev2BYEaOCJpgDk7J5BfvGywvqAdX5qOhLXc8WbCV3VXw0LWy7hbr9Hx5eJUG4fGYQ=="}/
+              %textarea#comment_body{name:"comment[body]", required:"required"}
               %p.noticeMsg
                 相手のことを考え丁寧なコメントを心がけましょう。
                 %br/
                 不快な言葉遣いなどは利用制限や退会処分となることがあります。
               %br/
-            %h4 ＜コメント一覧＞
-            .comments
-              - if @comments
-                - @comments.each do |comment|
-                  %p
-                    %strong
-                      = link_to comment.user.nickname, "#"
-                      ：
-                    = comment.text
+              %button.commentBtn{name:"button", type:"submit"}
+                %i.fa.fa-comment
+                コメントする
         %ul.links
           %li
             = link_to "#" do
