--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -64,7 +64,7 @@
                 %tbody
                   %tr
                     %th 出品者
-                    %td= link_to @user.nickname,item_path(@user)
+                    %td= link_to @item.user.nickname,item_path(@item.user_id)
                   %tr
                     %th カテゴリー
                     %td
