--- a/app/views/purchase/buy.html.haml
+++ b/app/views/purchase/buy.html.haml
@@ -48,7 +48,7 @@
             - else
               .card__detail__number
                 = "**** **** ****" +@default_card_information.last4
-                = form_tag(delete_pays_path, method: :post, id: 'charge-form',class: "card__delete",name: "inputForm") do
+                = form_tag(pays_path(@pay), method: :delete, id: 'charge-form',class: "card__delete",name: "inputForm") do
                   %input{ type: "hidden",name: "card_id", value:""}
                   %button.card__delete__button 削除する
               - exp_month = @default_card_information.exp_month.to_s
@@ -69,7 +69,7 @@
                     登録してください
             - else
               .address__register
-                = form_tag(delete_pays_path, method: :post, id: 'charge-form',class: "card__delete",name: "inputForm") do
+                = form_tag(root_path, method: :delete, id: 'charge-form',class: "card__delete",name: "inputForm") do
                   %input{ type: "hidden",name: "card_id", value:""}
                   %button.card__delete__button 削除する
                 .address__register__after
